--- a/boards/teensy/Makefile
+++ b/boards/teensy/Makefile
@@ -4,4 +4,15 @@ MCU=mk66fx1m0
 
 PLATFORM=teensy
 
-include ../Makefile
+TARGET = thumbv7em-none-eabi
+TEENSY_LOADER=teensy_loader_cli
+
+# include the base Tock kernel makefile
+include ../../tock/boards/Makefile.common
+
+.PHONY: program
+program: target/$(TARGET)/release/$(PLATFORM).hex
+	$(TEENSY_LOADER) -mmcu=$(MCU) -v -w $<
+
+target/$(TARGET)/release/$(PLATFORM).hex: target/$(TARGET)/release/$(PLATFORM).elf
+	$(Q)$(OBJCOPY) -Oihex $^ $@
