Move the mk66/regs module to new common crate

--- a/chips/mk66/Cargo.toml
+++ b/chips/mk66/Cargo.toml
@@ -17,3 +17,4 @@ lto = true
 kernel = { path = "../../tock/kernel" }
 cortexm4 = { path = "../../tock/arch/cortex-m4" }
 capsules = { path = "../../tock/capsules" }
+common = { path = "../../common" }
