--- a/chips/mk66/Cargo.toml
+++ b/chips/mk66/Cargo.toml
@@ -18,3 +18,6 @@ kernel = { path = "../../tock/kernel" }
 cortexm4 = { path = "../../tock/arch/cortex-m4" }
 capsules = { path = "../../tock/capsules" }
 common = { path = "../../common" }
+sha2 = "0.7.0"
+twofish = "0.1.0"
+block-cipher-trait = "0.5.0"
