--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "tock"]
 	path = tock
 	url = https://github.com/helena-project/tock.git
+[submodule "libtock-c"]
+	path = libtock-c
+	url = https://github.com/tock/libtock-c.git
